--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
       <footer>
         <p class="footer">&copy; 2022 Mesto Russia</p>
       </footer>
+      <div class="popup">
+
+        <div class="popup__container">
+          <h2 class="popup__title">Редактировать профиль</h2>
+        <form action="#" name="profile" class="popup__form">
+          <input type="text" name="user-name" placeholder="Имя" class="popup__input">
+          <input type="text" name="user-info" placeholder="О себе" class="popup__input">
+          <button class="popup__button">Сохранить</button>
+        </form>
+        <button class="popup__close"></button>
+        </div>
     </div>
   </body>
 </html>
