--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./page/index.css" />
+    <link rel="stylesheet" href="./page/index.css" type="text/css" />
   </head>
-  <body>
+  <body class="body">
     <div class="root">
       <header class="header">
         <img src="./image/logo.svg" alt="Логотип" class="header__logo" />
       </header>
-
       <main>
         <section class="profile">
           <div class="profile__item">
@@ -40,22 +39,14 @@
               />
               <div class="cards__description">
                 <p class="cards__text">Санкт-Петербург</p>
-                <img
-                  src="./image/Group__like.svg"
-                  alt="Сердечко"
-                  class="cards__like"
-                />
+                <div class="cards__like"></div>
               </div>
             </li>
             <li class="cards__item">
               <img src="./image/sochi.jpg" alt="Сочи" class="cards__image" />
               <div class="cards__description">
                 <p class="cards__text">Сочи</p>
-                <img
-                  src="./image/Group__like.svg"
-                  alt="Сердечко"
-                  class="cards__like"
-                />
+                <div class="cards__like"></div>
               </div>
             </li>
             <li class="cards__item">
@@ -66,22 +57,14 @@
               />
               <div class="cards__description">
                 <p class="cards__text">Байкал</p>
-                <img
-                  src="./image/Group__like.svg"
-                  alt="Сердечко"
-                  class="cards__like"
-                />
+                <div class="cards__like"></div>
               </div>
             </li>
             <li class="cards__item">
               <img src="./image/Dombai.png" alt="Домбай" class="cards__image" />
               <div class="cards__description">
                 <p class="cards__text">Домбай</p>
-                <img
-                  src="./image/Group__like.svg"
-                  alt="Сердечко"
-                  class="cards__like"
-                />
+                <div class="cards__like"></div>
               </div>
             </li>
             <li class="cards__item">
@@ -92,11 +75,7 @@
               />
               <div class="cards__description">
                 <p class="cards__text">Гора Эльбрус</p>
-                <img
-                  src="./image/Group__like.svg"
-                  alt="Сердечко"
-                  class="cards__like"
-                />
+                <div class="cards__like"></div>
               </div>
             </li>
             <li class="cards__item">
@@ -107,11 +86,7 @@
               />
               <div class="cards__description">
                 <p class="cards__text">Карачаево-Черкессия</p>
-                <img
-                  src="./image/Group__like.svg"
-                  alt="Сердечко"
-                  class="cards__like"
-                />
+                <div class="cards__like"></div>
               </div>
             </li>
           </ul>
@@ -121,16 +96,27 @@
         <p class="footer">&copy; 2022 Mesto Russia</p>
       </footer>
       <div class="popup">
-
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" name="profile" class="popup__form">
-          <input type="text" name="user-name" placeholder="Имя" class="popup__input">
-          <input type="text" name="user-info" placeholder="О себе" class="popup__input">
-          <button class="popup__button">Сохранить</button>
-        </form>
-        <button class="popup__close"></button>
+          <form action="#" name="profile" class="popup__form">
+            <input
+              type="text"
+              name="user-name"
+              placeholder="Имя"
+              class="popup__input"
+            />
+            <input
+              type="text"
+              name="user-info"
+              placeholder="О себе"
+              class="popup__input"
+            />
+            <button class="popup__button" type="submit">Сохранить</button>
+          </form>
+          <button class="popup__close"></button>
         </div>
+      </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
