fixed bugs in index.html and index.js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
     <link rel="stylesheet" href="./page/index.css" type="text/css" />
-    <link rel="stylesheet" href="./page/index.css" type="text/css" />
   </head>
   <body class="body">
     <div class="root">
@@ -39,15 +38,15 @@
                 class="cards__image"
               />
               <div class="cards__description">
-                <p class="cards__text">Санкт-Петербург</p>
-                <div class="cards__like"></div>
+                <h2 class="cards__text">Санкт-Петербург</h2>
+                <button class="cards__like"></button>
               </div>
             </li>
             <li class="cards__item">
               <img src="./image/sochi.jpg" alt="Сочи" class="cards__image" />
               <div class="cards__description">
-                <p class="cards__text">Сочи</p>
-                <div class="cards__like"></div>
+                <h2 class="cards__text">Сочи</h2>
+                <button class="cards__like"></button>
               </div>
             </li>
             <li class="cards__item">
@@ -57,15 +56,15 @@
                 class="cards__image"
               />
               <div class="cards__description">
-                <p class="cards__text">Байкал</p>
-                <div class="cards__like"></div>
+                <h2 class="cards__text">Байкал</h2>
+                <button class="cards__like"></button>
               </div>
             </li>
             <li class="cards__item">
               <img src="./image/Dombai.png" alt="Домбай" class="cards__image" />
               <div class="cards__description">
-                <p class="cards__text">Домбай</p>
-                <div class="cards__like"></div>
+                <h2 class="cards__text">Домбай</h2>
+                <button class="cards__like"></button>
               </div>
             </li>
             <li class="cards__item">
@@ -75,8 +74,8 @@
                 class="cards__image"
               />
               <div class="cards__description">
-                <p class="cards__text">Гора Эльбрус</p>
-                <div class="cards__like"></div>
+                <h2 class="cards__text">Гора Эльбрус</h2>
+                <button class="cards__like"></button>
               </div>
             </li>
             <li class="cards__item">
@@ -86,15 +85,15 @@
                 class="cards__image"
               />
               <div class="cards__description">
-                <p class="cards__text">Карачаево-Черкессия</p>
-                <div class="cards__like"></div>
+                <h2 class="cards__text">Карачаево-Черкессия</h2>
+                <button class="cards__like"></button>
               </div>
             </li>
           </ul>
         </section>
       </main>
-      <footer>
-        <p class="footer">&copy; 2022 Mesto Russia</p>
+      <footer class="footer">
+        <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
       <div class="popup">
         <div class="popup__container">
@@ -118,6 +117,6 @@
         </div>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="../mesto/scripts/index.js"></script>
   </body>
 </html>
