--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
         </div>
       </div>
     </div>
-    <script src="../mesto/scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
