--- a/index.html
+++ b/index.html
@@ -95,7 +95,56 @@
       <footer class="footer">
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
-      <div class="popup">
+      <!-- Попап для редактирования профиля  -->
+      <div class="popup popup_create-profile">
+        <div class="popup__container">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form
+            action="#"
+            name="profile"
+            class="popup__form popup__form-profile"
+          >
+            <input
+              type="text"
+              name="user-name"
+              placeholder="Имя"
+              class="popup__input"
+            />
+            <input
+              type="text"
+              name="user-info"
+              placeholder="О себе"
+              class="popup__input"
+            />
+            <button class="popup__button" type="submit">Сохранить</button>
+          </form>
+          <button class="popup__close popup__close-profile"></button>
+        </div>
+      </div>
+      <!-- Попап для добавления карточек  -->
+      <div class="popup popup_cards-add">
+        <div class="popup__container">
+          <h2 class="popup__title">Новое место</h2>
+          <form action="#" name="profile" class="popup__form popup__form-cards">
+            <input
+              type="text"
+              name="user-name"
+              placeholder="Название"
+              class="popup__input"
+            />
+            <input
+              type="text"
+              name="user-info"
+              placeholder="Ссылка на картинку"
+              class="popup__input"
+            />
+            <button class="popup__button" type="submit">Создать</button>
+          </form>
+          <button class="popup__close popup__close-cards"></button>
+        </div>
+      </div>
+      <!-- Попап открытия карточек -->
+      <!-- <div class="popup">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
           <form action="#" name="profile" class="popup__form">
@@ -115,7 +164,20 @@
           </form>
           <button class="popup__close"></button>
         </div>
-      </div>
+      </div> -->
+      <template class="template__cards">
+        <li class="cards__item">
+          <img
+            src="./image/Peterburg.jpg"
+            alt="Санкт-Петербург"
+            class="cards__image"
+          />
+          <div class="cards__description">
+            <h2 class="cards__text">Санкт-Петербург</h2>
+            <button class="cards__like"></button>
+          </div>
+        </li>
+      </template>
     </div>
     <script src="./scripts/index.js"></script>
   </body>
