feat: added delete card

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
               <div class="cards__description">
                 <h2 class="cards__text">Санкт-Петербург</h2>
                 <button class="cards__like"></button>
-                <button class="cards__trash"></button>
               </div>
             </li>
             <li class="cards__item">
@@ -159,15 +158,12 @@
 
       <template class="template__cards">
         <li class="cards__item">
-          <img
-            src="./image/Peterburg.jpg"
-            alt="Санкт-Петербург"
-            class="cards__image"
-          />
+          <img src="" alt="" class="cards__image" />
           <div class="cards__description">
-            <h2 class="cards__text">Санкт-Петербург</h2>
+            <h2 class="cards__text"></h2>
             <button class="cards__like"></button>
           </div>
+          <button class="cards__trash"></button>
         </li>
       </template>
     </div>
