fix: fixed index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
       <template class="template__cards">
         <li class="cards__item">
-          <img src="" alt="" class="cards__image" />
+          <img src="#" alt="#" class="cards__image" />
           <div class="cards__description">
             <h2 class="cards__text"></h2>
             <button class="cards__like"></button>
