--- a/index.html
+++ b/index.html
@@ -30,66 +30,7 @@
         </section>
 
         <section class="elements">
-          <ul class="cards">
-            <li class="cards__item">
-              <img
-                src="./image/Peterburg.jpg"
-                alt="Санкт-Петербург"
-                class="cards__image"
-              />
-              <div class="cards__description">
-                <h2 class="cards__text">Санкт-Петербург</h2>
-                <button class="cards__like"></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img src="./image/sochi.jpg" alt="Сочи" class="cards__image" />
-              <div class="cards__description">
-                <h2 class="cards__text">Сочи</h2>
-                <button class="cards__like"></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                src="./image/Bailkal.jpg"
-                alt="Байкал"
-                class="cards__image"
-              />
-              <div class="cards__description">
-                <h2 class="cards__text">Байкал</h2>
-                <button class="cards__like"></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img src="./image/Dombai.png" alt="Домбай" class="cards__image" />
-              <div class="cards__description">
-                <h2 class="cards__text">Домбай</h2>
-                <button class="cards__like"></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                src="./image/Elbrus.png"
-                alt="Гора Эльбрус"
-                class="cards__image"
-              />
-              <div class="cards__description">
-                <h2 class="cards__text">Гора Эльбрус</h2>
-                <button class="cards__like"></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                src="./image/karachaevsk.jpg"
-                alt="Карачаево-Черкессия"
-                class="cards__image"
-              />
-              <div class="cards__description">
-                <h2 class="cards__text">Карачаево-Черкессия</h2>
-                <button class="cards__like"></button>
-              </div>
-            </li>
-          </ul>
+          <ul class="cards"></ul>
         </section>
       </main>
       <footer class="footer">
@@ -146,11 +87,7 @@
       <!-- Попап открытия карточек -->
       <div class="popup popup_image">
         <div class="popup__image">
-          <img
-            src="./image/Peterburg.jpg"
-            alt="Домбай"
-            class="popup__image-scale"
-          />
+          <img src="#" alt="#" class="popup__image-scale" />
           <p class="popup__image-text">Санкт-Петербург</p>
           <button class="popup__close popup__close-image"></button>
         </div>
