--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="popup popup_image">
         <div class="popup__image">
           <img src="#" alt="#" class="popup__image-scale" />
-          <p class="popup__image-text">Санкт-Петербург</p>
+          <p class="popup__image-text"></p>
           <button class="popup__close popup__close-image"></button>
         </div>
       </div>
@@ -105,5 +105,6 @@
       </template>
     </div>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
