--- a/index.html
+++ b/index.html
@@ -44,19 +44,30 @@
             action="#"
             name="profile"
             class="popup__form popup__form-profile"
+            novalidate
           >
             <input
               type="text"
               name="user-name"
               placeholder="Имя"
               class="popup__input"
+              id="input__name"
+              minlength="2"
+              maxlength="40"
+              required
             />
+            <span class="input__name-error popup__error"></span>
             <input
               type="text"
               name="user-info"
               placeholder="О себе"
               class="popup__input"
+              id="input__info"
+              minlength="2"
+              maxlength="200"
+              required
             />
+            <span class="input__info-error popup__error"></span>
             <button class="popup__button" type="submit">Сохранить</button>
           </form>
           <button class="popup__close popup__close-profile"></button>
@@ -66,19 +77,32 @@
       <div class="popup popup_cards-add">
         <div class="popup__container">
           <h2 class="popup__title">Новое место</h2>
-          <form action="#" name="profile" class="popup__form popup__form-cards">
+          <form
+            action="#"
+            name="cards"
+            class="popup__form popup__form-cards"
+            novalidate
+          >
             <input
               type="text"
-              name="name-card"
+              name="title-card"
               placeholder="Название"
               class="popup__input"
+              id="input__card"
+              minlength="2"
+              maxlength="30"
+              required
             />
+            <span class="input__card-error popup__error"></span>
             <input
-              type="text"
+              type="url"
               name="link-card"
               placeholder="Ссылка на картинку"
               class="popup__input"
+              id="input__link"
+              required
             />
+            <span class="input__link-error popup__error"></span>
             <button class="popup__button" type="submit">Создать</button>
           </form>
           <button class="popup__close popup__close-cards"></button>
