--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
               name="user-name"
               placeholder="Имя"
               class="popup__input"
-              id="input__name"
+              id="input-name"
               minlength="2"
               maxlength="40"
               required
             />
-            <span class="input__name-error popup__error"></span>
+            <span class="popup__error input-name-error"></span>
             <input
               type="text"
               name="user-info"
               placeholder="О себе"
               class="popup__input"
-              id="input__info"
+              id="input-info"
               minlength="2"
               maxlength="200"
               required
             />
-            <span class="input__info-error popup__error"></span>
+            <span class="popup__error input-info-error"></span>
             <button class="popup__button" type="submit">Сохранить</button>
           </form>
           <button class="popup__close popup__close-profile"></button>
@@ -88,21 +88,21 @@
               name="title-card"
               placeholder="Название"
               class="popup__input"
-              id="input__card"
+              id="input-card"
               minlength="2"
               maxlength="30"
               required
             />
-            <span class="input__card-error popup__error"></span>
+            <span class="popup__error input-card-error"></span>
             <input
               type="url"
               name="link-card"
               placeholder="Ссылка на картинку"
               class="popup__input"
-              id="input__link"
+              id="input-link"
               required
             />
-            <span class="input__link-error popup__error"></span>
+            <span class="popup__error input-link-error"></span>
             <button class="popup__button" type="submit">Создать</button>
           </form>
           <button class="popup__close popup__close-cards"></button>
