fix: fixed index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               maxlength="40"
               required
             />
-            <span class="input__name-error popup__error"></span>
+            <span class="popup__error input__name-error"></span>
             <input
               type="text"
               name="user-info"
@@ -67,7 +67,7 @@
               maxlength="200"
               required
             />
-            <span class="input__info-error popup__error"></span>
+            <span class="popup__error input__info-error"></span>
             <button class="popup__button" type="submit">Сохранить</button>
           </form>
           <button class="popup__close popup__close-profile"></button>
@@ -93,7 +93,7 @@
               maxlength="30"
               required
             />
-            <span class="input__card-error popup__error"></span>
+            <span class="popup__error input__card-error"></span>
             <input
               type="url"
               name="link-card"
@@ -102,7 +102,7 @@
               id="input__link"
               required
             />
-            <span class="input__link-error popup__error"></span>
+            <span class="popup__error input__link-error"></span>
             <button class="popup__button" type="submit">Создать</button>
           </form>
           <button class="popup__close popup__close-cards"></button>
