--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <span class="popup__error input-info-error"></span>
             <button class="popup__button" type="submit">Сохранить</button>
           </form>
-          <button class="popup__close popup__close-profile"></button>
+          <button class="popup__close"></button>
         </div>
       </div>
       <!-- Попап для добавления карточек  -->
@@ -105,7 +105,7 @@
             <span class="popup__error input-link-error"></span>
             <button class="popup__button" type="submit">Создать</button>
           </form>
-          <button class="popup__close popup__close-cards"></button>
+          <button class="popup__close"></button>
         </div>
       </div>
       <!-- Попап открытия карточек -->
@@ -113,7 +113,7 @@
         <div class="popup__image">
           <img src="#" alt="#" class="popup__image-scale" />
           <p class="popup__image-text"></p>
-          <button class="popup__close popup__close-image"></button>
+          <button class="popup__close"></button>
         </div>
       </div>
 
