--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
       <main>
         <section class="profile">
           <div class="profile__item">
-            <img
-              src="./image/Avatar.png"
-              alt="Аватар"
-              class="profile__avatar"
-            />
+            <img src="./image/Бенз.png" alt="Аватар" class="profile__avatar" />
             <div class="profile__info">
-              <h1 class="profile__title">Жак-Ив Кусто</h1>
+              <h1 class="profile__title">Карл Бенц</h1>
               <button class="profile__button-create"></button>
-              <p class="profile__subtitle">Исследователь океана</p>
+              <p class="profile__subtitle">Инженер-изобретатель</p>
             </div>
           </div>
           <button class="profile__button-add"></button>
