--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </template>
     </div>
     <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/Card.js"></script>
-    <script type="module" src="./scripts/FormValidator.js"></script>
+    <!-- <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script> -->
   </body>
 </html>
