--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./page/index.css" type="text/css" />
   </head>
   <body class="body">
     <div class="root">
       <header class="header">
-        <img src="./image/logo.svg" alt="Логотип" class="header__logo" />
+        <img
+          src="<%=require('../image/logo.svg')%>"
+          alt="Логотип"
+          class="header__logo"
+        />
       </header>
       <main>
         <section class="profile">
           <div class="profile__item">
-            <img src="./image/Бенз.png" alt="Аватар" class="profile__avatar" />
+            <img
+              src="<%=require('../image/Бенз.png')%>"
+              alt="Аватар"
+              class="profile__avatar"
+            />
             <div class="profile__info">
               <h1 class="profile__title">Карл Бенц</h1>
               <button class="profile__button-create"></button>
@@ -124,8 +131,5 @@
         </li>
       </template>
     </div>
-    <script type="module" src="./scripts/index.js"></script>
-    <!-- <script type="module" src="./scripts/Card.js"></script>
-    <script type="module" src="./scripts/FormValidator.js"></script> -->
   </body>
 </html>
