fix: profile__avatar

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
       <main>
         <section class="profile">
           <div class="profile__item">
-            <img
+            <!-- <img
               src="<%=require('../image/Бенз.png')%>"
               alt="Аватар"
               class="profile__avatar"
-            />
-            <button class="profile__avatar-btn"></button>
+            /> -->
+            <button class="profile__avatar"></button>
             <div class="profile__info">
               <h1 class="profile__title">Карл Бенц</h1>
               <button class="profile__button-create"></button>
