--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="root">
       <header class="header">
         <img
-          src="<%=require('../image/logo.svg')%>"
+          src="<%=require('../src/image/logo.svg')%>"
           alt="Логотип"
           class="header__logo"
         />
@@ -119,7 +119,7 @@
       <div class="popup popup_delete-card">
         <div class="popup__container">
           <h2 class="popup__title">Вы уверены?</h2>
-          <button class="popup__button">Да</button>
+          <button class="popup__button" type="submit">Да</button>
           <button class="popup__close"></button>
         </div>
       </div>
